<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName" translatable="false">DuckDuckGo</string>
    <string name="appDescription" translatable="false">DuckDuckGo</string>
    <string name="duckDuckGoLogoDescription">DuckDuckGo logo</string>
    <string name="duckDuckGoProtectionPrivacyPeaceTagLine">Protection. Privacy. Peace of Mind.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="onboardingDefaultBrowserDescription">Visit Settings to search and browse with DuckDuckGo every time.</string>
    <string name="onboardingDefaultBrowserTitle">Make DuckDuckGo your default</string>
    <string name="cannotLaunchDefaultAppSettings">Can\'t launch default app settings screen</string>
    <string name="setAsDefaultBrowser">Set As Default Browser</string>
    <string name="defaultBrowserMaybeLater">Maybe Later</string>
    <string name="defaultBrowserDescriptionNoDefault">Open links with peace of mind, every time.</string>
    <string name="defaultBrowserInstructions">Select DuckDuckGo and tap <font color='#678fff'>Always</font>.</string>
    <string name="browserPopupMenu">Browser menu</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="omnibarInputHint">Search or type URL</string>
    <string name="clearButtonContentDescription">Clear search input</string>
    <string name="no_compatible_third_party_app_installed">No compatible app installed</string>
    <string name="addBookmarkMenuTitle">Add Bookmark</string>
    <string name="editBookmarkMenuTitle">Edit Bookmark</string>
    <string name="addFavoriteMenuTitle">Add Favorite</string>
    <string name="removeFavoriteMenuTitle">Remove Favorite</string>
    <string name="favoriteAddedMessage">Favorite added</string>
    <string name="bookmarkAddedMessage">Bookmark added</string>
    <string name="requestDesktopSiteMenuTitle">Desktop Site</string>
    <string name="fireproofWebsiteMenuTitleRemove">Remove Fireproofing</string>
    <string name="requestMobileSiteMenuTitle">Mobile Site</string>
    <string name="downloadsMenuTitle">Downloads</string>
    <string name="printMenuTitle">Print Page</string>
    <string name="favoriteDeleteConfirmationMessage">Favorite removed</string>
    <string name="fireproofDeleteConfirmationMessage">Fireproofing removed</string>
    <string name="privacyProtectionEnabledConfirmationMessage" instruction="Placeholder is a website">Privacy Protection enabled for %1$s</string>
    <string name="privacyProtectionDisabledConfirmationMessage" instruction="Placeholder is a website">Privacy Protection disabled for %1$s</string>
    <string name="undoSnackbarAction">Undo</string>
    <plurals name="trackersBlockedAnimationMessage" tools:ignore="ImpliedQuantity">
        <item quantity="one" instruction="This sentence is preceded by a number greater than zero, i.e. 1 Tracker Blocked">Tracker Blocked</item>
        <item quantity="other" instruction="This sentence is preceded by a number greater than zero, i.e. 5 Trackers Blocked">Trackers Blocked</item>
    </plurals>
    <string name="downloadImage">Download Image</string>
    <string name="permissionRequiredToDownload">Downloading requires storage permission</string>
    <string name="options">Options</string>
    <string name="shareLink">Share Link</string>
    <string name="shareMenuTitle">Share</string>
    <string name="copyUrl">Copy Link Address</string>
    <string name="findInPageMenuTitle">Find in Page</string>
    <string name="nextSearchTermDescription">Find next</string>
    <string name="previousSearchTermDescription">Find previous</string>
    <string name="closeFindInPageButtonDescription">Close find in page view</string>
    <string name="findInPageHint">Find in page</string>
    <string name="findInPageMatches" translatable="false">%1$d/%2$d</string>
    <string name="editQueryBeforeSubmitting">Edit query before searching</string>
    <string name="autocompleteRemoveItemTitle">Remove search suggestion?</string>
    <string name="autocompleteRemoveItemCancel">Cancel</string>
    <string name="autocompleteRemoveItemRemove">Remove</string>
    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Switch to Tab · %1$s</string>
    <string name="openExternalApp">Open External App</string>
    <string name="launchingExternalApp">Open in another app</string>
    <string name="confirmOpenExternalApp">Would you like to leave DuckDuckGo to view this content?</string>
    <string name="unableToOpenLink">Unable to open this type of link</string>
    <string name="homeTab" translatable="false">DuckDuckGo</string>
    <string name="tabActivityTitle">Tabs</string>
    <string name="tabsMenuItem">Tabs</string>
    <string name="newTabMenuItem">New Tab</string>
    <string name="openInNewTab">Open in New Tab</string>
    <string name="openInNewBackgroundTab">Open in Background Tab</string>
    <string name="openImageInNewTab">Open Image in Background Tab</string>
    <string name="faviconContentDescription">Favicon</string>
    <string name="closeContentDescription">Close</string>
    <string name="closeAllTabsMenuItem">Close All Tabs</string>
    <string name="closeTab">Close Tab</string>
    <string name="tabClosed">Tab closed</string>
    <string name="tabClosedUndo">Undo</string>
    <string name="downloadsMenuItemTitle">Downloads</string>
    <string name="tabSwitcherListViewMenu">List view</string>
    <string name="tabSwitcherGridViewMenu">Grid view</string>
    <string name="trackersBlockedInTheLast7days" instruction="Placeholder is the number of trackers blocked > 1">&lt;b&gt;%1$s trackers blocked &lt;/b&gt; in the last 7 days</string>
    <string name="trackersBlocked" instruction="Placeholder is the number of trackers blocked">&lt;b&gt;%1$s trackers blocked &lt;/b&gt;</string>
    <string name="inTheLast7Days">in the last 7 days</string>
    <string name="fireMenu">Clear Data</string>
    <string name="fireClearAll">Clear All Tabs And Data</string>
    <string name="fireCancel">Cancel</string>
    <string name="fireDataCleared">Data cleared</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="settingsMenuItemTitle">Settings</string>
    <string name="settingsHeadingProtections">Protections</string>
    <string name="settingsHeadingAppearance">Appearance</string>
    <string name="settingsHeadingAbout">About</string>
    <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
    <string name="settingsVersion">Version</string>
    <string name="leaveFeedback">Share Feedback</string>
    <string name="leaveFeedbackNew">Send Feedback</string>
    <string name="settingsEmailProtectionTitle">Email Protection</string>
    <string name="settingsHeadingNextSteps">Next Steps</string>
    <string name="settingsLightTheme">Light</string>
    <string name="settingsTheme">Theme</string>
    <string name="settingsDarkTheme">Dark</string>
    <string name="settingsSystemTheme">System default</string>
    <string name="settingsThemeDialogSave">Set Theme</string>
    <string name="settingsTitleAppLinks">Open Links in Apps</string>
    <string name="settingsTitleAppLinksDialog">Open links in apps</string>
    <string name="settingsAppLinksAskEveryTime">Ask every time</string>
    <string name="settingsAppLinksAlways">Always</string>
    <string name="settingsAppLinksNever">Never</string>
    <string name="settingsTitleNotifications">Notifications</string>
    <string name="settingsSubtitleNotificationsDisabled">Disabled</string>
    <string name="settingsSubtitleNotificationsEnabled">Enabled</string>
    <string name="settingsDefaultBrowserTitle">Default Browser</string>
    <string name="settingsPrivateSearchTitle">Private Search</string>
    <string name="settingsGeneral" instruction="List item for general settings">General</string>
    <string name="settingsWebTrackingProtectionTitle">Web Tracking Protection</string>
    <string name="settingsHeadingMainSettings">Other Settings</string>
    <string name="settingsPermissionsSetting">Permissions</string>
    <string name="settingsSyncSetting">Sync &amp; Backup</string>
    <string name="settingsDataClearing">Data Clearing</string>
    <string name="settingsAddWidget">Add Widget to Home Screen</string>
    <string name="settingsAddressBarPosition">Set Your Address Bar Position</string>
    <string name="settingsEnableVoiceSearch">Enable Private Voice Search</string>
    <string name="settingsDDGOnOtherPlatforms">DuckDuckGo on Other Platforms</string>
    <string name="privateSearchActivityTitle">Private Search</string>
    <string name="privateSearchDescription">DuckDuckGo Private Search is your default search engine, so you can search the web without being tracked.</string>
    <string name="privateSearchMoreSearchSettingsPrimaryText">More Search Settings</string>
    <string name="privateSearchMoreSearchSettingsSecondaryText">Customize your search language, region, and more</string>
    <string name="privateSearchMoreSearchSettingsTitle">More Search Settings</string>
    <string name="privateSearchAutocompleteToggle">Search Suggestions</string>
    <string name="privateSearchAutocompleteHint">Show search suggestions as you type, including your bookmarks. All searches are private.</string>
    <string name="cookiePopupProtectionTitle">Cookie Pop-Up Protection</string>
    <string name="widgetConfigurationTitleText">Choose Theme</string>
    <string name="widgetConfigurationSystemThemeOption">System default</string>
    <string name="widgetConfigurationLightThemeOption">Light</string>
    <string name="widgetConfigurationDarkThemeOption">Dark</string>
    <string name="widgetConfigurationAddWidgetOption">Add widget</string>
    <string name="preciseLocationSystemDialogTitle">Enable device location for DuckDuckGo Privacy Browser?</string>
    <string name="preciseLocationSystemDialogSubtitle" instruction="%1$s and %2$s are both the name of the website requesting the location">%1$s is requesting your device location. You\'ll first need to allow the app to send your device location, then %2$s can ask permission.</string>
    <string name="preciseLocationSystemDialogAllow">Enable</string>
    <string name="preciseLocationSystemDialogDeny">Maybe Later</string>
    <string name="preciseLocationSystemDialogNeverAllow">Don\'t Ask Again for This Site</string>
    <string name="preciseLocationSiteDialogTitle" instruction="Placeholder is the name of a website">Grant %1$s permission to access location?</string>
    <string name="preciseLocationSiteDialogSubtitle">You can manage the location access permissions you’ve granted to individual sites in Settings.</string>
    <string name="preciseLocationSiteDialogAllowAlways">Always</string>
    <string name="preciseLocationSiteDialogAllowOnce">Only for This Session</string>
    <string name="preciseLocationSiteDialogDenyAlways">Deny Always</string>
    <string name="preciseLocationSiteDialogDenyOnce">Deny for This Session</string>
    <string name="settingsAccessibility">Accessibility</string>
    <string name="downloadsItemMenuShare">Share</string>
    <string name="downloadsItemMenuDelete">Delete</string>
    <string name="downloadsItemMenuCancel">Cancel</string>
    <string name="atp_SettingsTitle">App Tracking Protection</string>
    <string name="selectTabsMenuItem">Select Tabs</string>
    <string name="selectAllTabsMenuItem">Select All</string>
    <string name="deselectAllTabsMenuItem">Deselect All</string>
    <string name="closeOtherTabsMenuItem">Close Other Tabs</string>
    <string name="settingsPasswordsAndAutofillLoginsSetting">Passwords &amp; Autofill</string>
    <string name="duckChatMenuItem">New AI Chat</string>
</resources>