<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/layoutTypeMenuItem"
        android:icon="@drawable/ic_view_list_24"
        android:title="@string/tabSwitcherListViewMenu"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/fireMenuItem"
        android:icon="@drawable/ic_fire_24"
        android:title="@string/fireMenu"
        app:showAsAction="always" />

    <item
        android:id="@+id/newTab"
        android:icon="@drawable/ic_add_24"
        android:title="@string/newTabMenuItem"
        app:showAsAction="always" />

    <item
        android:id="@+id/newTabOverflow"
        android:title="@string/newTabMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/duckChat"
        android:title="@string/duckChatMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/closeAllTabs"
        android:title="@string/closeAllTabsMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/downloads"
        android:title="@string/downloadsMenuItemTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settingsMenuItemTitle"
        app:showAsAction="never" />

</menu>
