<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsSectionPrivacy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsPrivacyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingProtections" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/setAsDefaultBrowserSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_default_browser_mobile_color_24"
        app:primaryText="@string/settingsDefaultBrowserTitle" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/privateSearchSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorStatus="on"
        app:leadingIcon="@drawable/ic_find_search_color_24"
        app:primaryText="@string/settingsPrivateSearchTitle" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/webTrackingProtectionSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorStatus="on"
        app:leadingIcon="@drawable/ic_shield_color_24"
        app:primaryText="@string/settingsWebTrackingProtectionTitle" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/cookiePopupProtectionSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_cookie_color_24"
        app:primaryText="@string/cookiePopupProtectionTitle" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/vpnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_lock_color_24"
        app:primaryText="@string/atp_SettingsTitle" />

    <com.duckduckgo.common.ui.view.listitem.SettingsListItem
        android:id="@+id/emailSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_email_protection_color_24"
        app:primaryText="@string/settingsEmailProtectionTitle" />

</LinearLayout>
