<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_menu_bg">

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/newTabMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/newTabMenuItem" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/duckChatMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/duckChatMenuItem" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/selectAllMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/selectAllTabsMenuItem" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/deselectAllMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/deselectAllTabsMenuItem" />

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/selectionActionsDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultPadding="false" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/bookmarkSelectedTabsMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/shareSelectedLinksMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/selectTabsDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultPadding="false" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/selectTabsMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/selectTabsMenuItem" />

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/close_all_tabs_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultPadding="false" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/closeAllTabsMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/closeAllTabsMenuItem"
        app:primaryTextType="destructive" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/closeOtherTabsMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/closeOtherTabsMenuItem"
        app:primaryTextType="destructive" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/closeSelectedTabsMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryTextType="destructive" />

</LinearLayout>