<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.DuckDuckGo.Dialog.Content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/sitePermissionDialogTitle"
                app:typography="h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preciseLocationSiteDialogTitle"/>

        <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/sitePermissionDialogSubtitle"
                app:typography="body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_2"
                android:text="@string/preciseLocationSiteDialogSubtitle"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_5"
                android:gravity="end"
                android:orientation="vertical">

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/siteAllowAlwaysLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preciseLocationSiteDialogAllowAlways"/>

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/siteAllowOnceLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preciseLocationSiteDialogAllowOnce"/>

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/siteDenyOnceLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preciseLocationSiteDialogDenyOnce"/>

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/siteDenyAlwaysLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preciseLocationSiteDialogDenyAlways"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>