<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/popup_menu_bg">

    <com.duckduckgo.common.ui.view.PopupMenuItemView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primaryText="@string/downloadsItemMenuShare" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primaryText="@string/downloadsItemMenuDelete" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primaryText="@string/downloadsItemMenuCancel" />

</LinearLayout>