<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/systemPermissionDialogTitle"
                app:typography="h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preciseLocationSystemDialogTitle"/>

        <com.duckduckgo.common.ui.view.text.DaxTextView
                android:id="@+id/systemPermissionDialogSubtitle"
                app:typography="body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_2"
                android:text="@string/preciseLocationSystemDialogSubtitle"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_5"
                android:gravity="end"
                android:orientation="vertical">

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/allowLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/preciseLocationSystemDialogAllow"/>

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/denyLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/preciseLocationSystemDialogDeny"/>

            <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                    android:id="@+id/neverAllowLocationPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/preciseLocationSystemDialogNeverAllow"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>