<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/daxColorSurface"
        android:orientation="vertical"
        android:padding="16dp">

        <com.duckduckgo.common.ui.view.text.DaxTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widgetConfigurationTitleText"
            app:typography="h2" />

        <ImageView
            android:id="@+id/widgetConfigPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/keyline_4"
            android:src="@drawable/search_favorites_widget_light_preview" />

        <RadioGroup
            android:id="@+id/widgetConfigThemeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/widgetConfigThemeSystem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/widgetConfigurationSystemThemeOption"
                android:textColor="?attr/daxColorPrimaryText"
                android:visibility="gone"
                tools:visibility="visible" />

            <RadioButton
                android:id="@+id/widgetConfigThemeLight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:checked="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/widgetConfigurationLightThemeOption"
                android:textColor="?attr/daxColorPrimaryText" />

            <RadioButton
                android:id="@+id/widgetConfigThemeDark"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/widgetConfigurationDarkThemeOption"
                android:textColor="?attr/daxColorPrimaryText" />
        </RadioGroup>

        <com.duckduckgo.common.ui.view.button.DaxButtonPrimary
            android:id="@+id/widgetConfigAddWidgetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/widgetConfigurationAddWidgetOption" />
    </LinearLayout>
</FrameLayout>